Fix CI tests by making bot token check optional during imports
- Remove token requirement from config.py imports
- Move token validation to bot initialization
- Add dummy token for CI import tests
- This allows tests to run without requiring a real bot token

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,8 @@ jobs:
         bandit -r src/ -f json -o bandit-report.json || true
     
     - name: Test imports
+      env:
+        TELEGRAM_BOT_TOKEN: "dummy_token_for_testing"
       run: |
         python -c "from src.config import BRIDGE_ADDRESS"
         python -c "from src.zenon.decoder import TransactionDecoder"
